archive/ai/flowise/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-validation-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: confluence
spec:
  hostnames: ["wiki.astrateam.net"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: confluence
          namespace: atlassian-prod
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /synchrony
      backendRefs:
        - name: confluence-synchrony
          namespace: atlassian-prod
          port: 80
